--- a/petanque.html
+++ b/petanque.html
@@ -19,11 +19,10 @@
   </head>
   <body>
 
-    <button type="button" class="btn btn-outline-info">Menu</Menu></button>
-    <button type="button" class="btn btn-outline-info">Choix du niveau </button>
-    <button type="button" class="btn btn-outline-info">Instructions</button>
-    <button type="button" class="btn btn-outline-info">Présentation du groupe</button>
-    <canvas id="myCanvas" width="480" height="320"></canvas>
+    <a href="index.html" class="button button4"> Accueil</a>
+    <a href="ChoixLvl.html" class="button button4"> Choix Level</a> 
+    <a href="instruction.html" class="button button4"> Instruction</a>
+    <a href="presentation.html" class="button button4"> Présentation du groupe</a> <br><br><br>
     <script src="niveau1.js"></script>
     <audio
       controls=""
