--- a/petanque.html
+++ b/petanque.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <link href="bootstrap/bootstrap.css" rel="stylesheet" />
     <link href="bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="petanque.css">
+
     <title>Petanque shooter</title>
     <style>
       * {
@@ -18,11 +20,12 @@
     </style>
   </head>
   <body>
-
+    
     <a href="index.html" class="button button4"> Accueil</a>
     <a href="ChoixLvl.html" class="button button4"> Choix Level</a> 
     <a href="instruction.html" class="button button4"> Instruction</a>
     <a href="presentation.html" class="button button4"> Présentation du groupe</a> <br><br><br>
+    <canvas id="myCanvas" width="480" height="320"></canvas>
     <script src="niveau1.js"></script>
     <audio
       controls=""
