--- a/petanque.html
+++ b/petanque.html
@@ -17,9 +17,9 @@
         display: block;
         margin: 0 auto;
       }
-    </style>
+    </style> 
   </head>
-  <body>
+  <body> <!--Ici la zone où l'on a rajouté des bouttons. -->
     
     <a href="index.html" class="button button4"> Accueil</a>
     <a href="ChoixLvl.html" class="button button4"> Choix Level</a> 
@@ -27,8 +27,8 @@
     <a href="presentation.html" class="button button4"> Présentation du groupe</a> <br><br><br>
     <canvas id="myCanvas" width="480" height="320"></canvas>
     <script src="niveau1.js"></script>
-    <audio
-      controls=""
+     <!--Ici la zone où l'on a ajouté l'audio que l'on prévoit de lancer automatiquement.. --><audio
+      controls="" 
       preload="auto"
       src="http://23.237.126.42/ost/pokemon-original-game-soundtrack/wahjdqip/101%20-%20opening.mp3"
     ></audio>
@@ -37,6 +37,6 @@
     </button>
     <button class="btn btn-outline-danger" onclick="window.location.reload();">
       Cliquez ici pour arreter
-    </button>
-  </body>
+    
+  </body> <!--Duvers bouttons pour lancer ou arreter le jeu. -->
 </html>
