--- a/ChoixLvl.html
+++ b/ChoixLvl.html
@@ -8,6 +8,7 @@
     <title>Level</title>
 </head>
 <body>
+   <!--La zone des boutons pour la page choix du niveau pour naviguer sur les autres écran-->
     <a href="index.html" class="button button4"> Accueil</a>
     <a href="instruction.html" class="button button4"> Instruction</a>
     <a href="petanque.html" class="button button4"> Jouer</a>   
@@ -18,8 +19,9 @@
 
 
 
-
+        
     <div id="midle">
+        <!--La zone des boutons pour choisir un niveau-->
 
         <a href="petanque.html" class="button button4"> Level1</a> <br><br><br><br>
         <a href="" class="button button4"> LevelX</a> <br><br><br><br>
