--- a/presentation.html
+++ b/presentation.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="Instruction.css">
+    <link rel="stylesheet" type="text/css" href="Instruction.css"> <!--Lien qui relie toutes les pages html au css -->
     <title>Présentation</title>
 </head>
 <body>
     <div id="midle">
+
+        <!--La zone des boutons pour la page instruction du jeux -->
 
         <a href="index.html" class="button button4"> Accueil</a>
         <a href="ChoixLvl.html" class="button button4"> Choix Level</a> 
@@ -20,8 +22,8 @@
     </div>
 
         <h1>Présentation du Groupe</h1>
-        <p>Projet jeux vidéo, notre groupe est composé de Rémi Charbonnier et Donovan Faglain nous vous présentons un Brick Shooter
-
+        <p><!--Une balise pour inserer une partie texte à la page -->
+            Projet jeux vidéo, notre groupe est composé de Rémi Charbonnier et Donovan Faglain nous vous présentons un Brick Shooter
         </p>
 
     
