--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="main.css"><!--Lien qui relie toutes les pages html au css -->
     <title>BRICK SHOOTER</title>
 </head>
 <body>
@@ -16,7 +16,8 @@
     <br>
     <br>
 
-    <div id="midle">
+    <div id="midle"> 
+    <!--La zone des boutons pour la page accueil du jeux -->
 
         <a href="petanque.html" class="button button4"> Jouer</a> <br><br><br><br>
         <a href="ChoixLvl.html" class="button button4"> Choix Level</a> <br><br><br><br>
