--- a/instruction.html
+++ b/instruction.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="Instruction.css">
+    <link rel="stylesheet" type="text/css" href="Instruction.css"><!--Lien qui relie toutes les pages html au css -->
     <title>Instruction</title>
 </head>
 <body>
+
+     <!--La zone des boutons pour la page instruction du jeux -->
 
         <a href="index.html" class="button button4"> Accueil</a>
         <a href="ChoixLvl.html" class="button button4"> Choix Level</a>
@@ -17,18 +19,19 @@
     <h1 class="h1">Instruction Brick Shooter</h1>
 
     <div>
-        <img id="clavier" src="clavier.PNG"> <br>
+        <img id="clavier" src="clavier.PNG"> <br> <!--Une balise pour inserer une image -->
+
         
-        <p> 
+        <p> <!--Une balise pour inserer une partie texte à la page -->
             Brick Shooter ce jouera avec le clavier,<br> avec pour touche les fleches du clavier pour diriger (Gauche/Droite) en rouge le vaiseau.<br>
             La touche fleche du haut en vert pour tirer sur les blocks qui descende 
         </p>
         <br>
         <br>
 
-        <img id="jeux" src="jeux.PNG">
+        <img id="jeux" src="jeux.PNG"> <!--Une balise pour inserer une image -->
 
-        <p>
+        <p> <!--Une balise pour inserer une partie texte à la page -->
             Sur cet image nous vous montrons:<br>
             -En rouge les boutons revenir en arrière.<br>
             -En vert pour activer ou désactiver la musique.<br>
