--- a/petanque.html
+++ b/petanque.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link href="bootstrap/bootstrap.css" rel="stylesheet" />
     <link href="bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="petanque.css">
+    <link rel="stylesheet" type="text/css" href="petanque.css"><!--Lien qui relie toutes les pages html au css -->
 
     <title>Petanque shooter</title>
     <style>
